--- a/assets/styles/cardActu.scss
+++ b/assets/styles/cardActu.scss
@@ -30,15 +30,16 @@ $fond :#fffdf0;
         background-color: $pastel;
         bottom: 0;
         left: 0;
-        .entreprise{
+        .titreActu{
             text-align: center;
-            font-size: 1.8em;
-            margin-bottom: 0;
-            margin-top: 0.2em;
+            font-size: 1.7em;
+            margin-bottom: 0.5em;
+            margin-top: 0.25em;
         }
-        .titre{
+        .sousTitre{
             text-align: center;
             font-weight: 500;
+            font-size: 1.2em;
         }
     }
 }
