--- a/templates/pages/Comment.html.twig
+++ b/templates/pages/Comment.html.twig
@@ -38,24 +38,16 @@
     <h2>Les étapes du prélèvement :</h2>
     <div class="etapes">
         <div class="etape">
-            <div class="iconSchema"><h2 class="nb">1.</h2><img class="icon" src={{ asset ('img/icons/entonnoir-a-huile.svg')}}>
-            <h2>Le placenta est suspendu dans un cône de recueil</h2></div>
-            <i class="fas fa-long-arrow-alt-right fa-4x"></i>
             <div class="iconSchema"><h2 class="nb">2.</h2><img class="icon" src={{ asset ('img/icons/bottle.svg')}}>
-            <h2>Le cordon ombilical est désinfecté dans une solution antiseptique</h2></div>
-        </div>
-        <i class="fas fa-long-arrow-alt-right fa-4x between"></i>
-        <div class="etape">
+            <h2>Le cordon ombilical est désinfecté par une solution antiseptique</h2></div>
+            <i class="fas fa-long-arrow-alt-right fa-4x"></i>
             <div class="iconSchema"><h2 class="nb">3.</h2><img class="icon" src={{ asset ('img/icons/syringe.svg')}}>
             <h2>Une aiguille est insérée dans la veine ombilicale</h2></div>
-            <i class="fas fa-long-arrow-alt-right fa-4x"></i>
-            <div class="iconSchema"><h2 class="nb">4.</h2><img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
-            <h2>Le sang est recueilli par gravité dans la poche</h2></div>
         </div>
         <i class="fas fa-long-arrow-alt-right fa-4x between"></i>
         <div class="etape">
-            <div class="iconSchema"><h2 class="nb">5.</h2><img class="icon" src={{ asset ('img/icons/cordonIncline.png')}}>
-            <h2>Le cordon apparaît vide et principalement blanc, habituellement après 2-4 minutes</h2></div>
+            <div class="iconSchema"><h2 class="nb">4.</h2><img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
+            <h2>Le sang est recueilli par gravité dans la poche pendant 2 à 4 minnutes</h2></div>
             <i class="fas fa-long-arrow-alt-right fa-4x"></i>
             <div class="iconSchema"><h2 class="nb">6.</h2><img class="icon" src={{ asset ('img/icons/test-tube.svg')}}>
             <h2>Une prise de sang est effectuée sur la maman pour analyses de sang</h2></div>
