--- a/templates/pages/Pourquoi.html.twig
+++ b/templates/pages/Pourquoi.html.twig
@@ -10,68 +10,66 @@
 
 {% block body %}
 
-    <p class="titlePage">Le don de cellules souches hématopoïétiques issue du sang de cordon ombilical apparaît comme alternative à la greffe de moelle osseuse, puisqu’il s’agit d’une source différente de cellules souches qui détient les mêmes spécificités et qui permet d’être moins invasive (prélèvement indolore) et qui reçoit une meilleure tolérance du receveur réduisant ainsi les possibilités de réactions immunitaires.</p>
-
     <h1>Pourquoi faire un don de sang de cordon ?</h1>
     <button class="accordion"><p class="accordionTitle">1.  Sauver des vies</p></button>
     <div class="panel">
-        <img class="illustrationAccordeon" src={{ asset ('img/Vie.PNG')}}><p>Grâce à votre don de sang de cordon, des traitements innovants peuvent être mis en place afin d’aider les personnes malades, ainsi faire un don de sang de cordon c’est aussi redonné de l’espoir aux personnes atteintes de maladies graves. On compte environ 2000 personnes qui ont besoin d’une greffe de cellules souches hématopoïétiques en France chaque année. </p>
+        <img class="illustrationAccordeon" src={{ asset ('img/Vie.PNG')}}><p>La greffe de cellules souches hématopoïétiques issues du sang de cordon ombilical est une alternative à la greffe de moelle osseuse, qui permet de traiter diverses maladies du sang. Il s’agit d’une source différente de cellules souches qui présente les mêmes spécificités et est moins invasive (prélèvement indolore) que le don de moelle osseuse et qui conduit à une meilleure tolérance du receveur, réduisant ainsi le risque d’effets secondaires indésirables.
+        <br><br>
+        Ainsi, faire un don de sang de cordon à usage thérapeutique, au sein des maternités du Réseau des banques de Sang Placentaire, c’est redonner de l’espoir aux personnes atteintes de maladies graves. On compte environ 2000 personnes qui, chaque année, ont besoin d’une greffe de cellules souches hématopoïétiques en France.
+        <br><br>        
+        Pour plus d’informations sur le don de sang placentaire à usage thérapeutique : <a href="https://www.dondesangdecordon.fr/don.php">Agence de la biomédecine</a> 
+        </p>
     </div>
 
     <button class="accordion"><p class="accordionTitle">2.	Aider la recherche</p></button>
     <div class="panel">
-        <img class="illustrationAccordeon" src={{ asset ('img/Science.PNG')}}><p>Les cellules souches prélevées dans le sang de cordon vont permettent de développer des activités scientifiques de recherche dans le domaine des cancers du sang et de la thérapie génique. Ainsi grâce à votre don de sang de cordon, les chercheurs peuvent mettre en place des traitements innovants. Lien renvoyant à onglet : Qu’est-ce que le don de sang de cordon « usage scientifique ».
-
-        Grâce à votre don, on peut produire d’autres types de cellules sanguines ou du sérum ou du plasma. Le cordon ombilical peut être également utilisé pour produire différents types de cellules comme les cellules souches <span class="tooltip">mésenchymateuses <span class="tooltipText">Les cellules souches mésenchymateuses sont des cellules issues de la moelle osseuse qui jouent un rôle dans la production et réparation de tissus squelettiques tels que le cartilage, les os et les graisses.</span></span>, ou les cellules <span class="tooltip">endothéliales <span class="tooltipText">Les cellules endothéliales sont des cellules minces et plates qui permettent un transfert rapide des substances entre le sang et le liquide interstitiel.
+        <img class="illustrationAccordeon" src={{ asset ('img/Science.PNG')}}><p>Le don de sang de cordon à usage scientifique mais aussi de cordon ombilical ou de placenta permet d’isoler diverses cellules qui ne peuvent pas (ou très difficilement) être prélevées sur des donneurs adultes ou qui présentent des caractéristiques uniques, différentes de celles des cellules adultes, ce qui les rend précieuses pour la recherche.
         <br><br>
-        Liquide interstitiel : Le liquide interstitiel remplit l'espace entre les capillaires sanguins et les cellules, Il facilite les échanges de nutriments et de déchets entre ceux-ci.
-        <br><br>
-        Capillaires : Le rôle des capillaires est de nourrir les tissus en nutriments et oxygène. Reliés aux veines et aux artères, les capillaires sanguins transportent les nutriments, notamment le glucose, et le dioxygène.
-        </span></span>  par exemple.</p>
+        Elles sont utilisées pour développer des traitements innovants du cancer ou de maladies auto-immunes ou des <span class="tooltip">thérapies <span class="tooltipText">Utilisation de cellules comme médicament pour la reconstruction d’organes ou des tissus lésés (tissus osseux, cartilagineux, adipeux ou musculaires, par exemple).</span></span> <span class="tooltip">cellulaires <span class="tooltipText">Utilisation de cellules comme médicament pour la reconstruction d’organes ou des tissus lésés (tissus osseux, cartilagineux, adipeux ou musculaires, par exemple).</span></span> <span class="tooltip">régénératrices <span class="tooltipText">Utilisation de cellules comme médicament pour la reconstruction d’organes ou des tissus lésés (tissus osseux, cartilagineux, adipeux ou musculaires, par exemple).</span></span>. Elles peuvent également être employées dans des tests in vitro dans le cadre du développement de médicaments plus classiques ou pour tester des vaccins.
+        Ainsi, faire un don de sang de cordon à usage scientifique, c’est aider la recherche.</p>
     </div>
 
     <button class="accordion"><p class="accordionTitle">3.	Une action responsable et solidaire</p></button>
     <div class="panel">
-        <img class="illustrationAccordeon" src={{ asset ('img/Solidarité.PNG')}}><p>L’acte de donner son sang de cordon est un acte citoyen, généreux, solidaire, et important qui peut aider de nombreuses personnes dans le besoin. Cette expérience riche s’inscrit dans une dynamique de partage tant pour le donneur que pour le receveur.</p>
+        <img class="illustrationAccordeon" src={{ asset ('img/Solidarité.PNG')}}><p>L’acte de donner son sang de cordon est un acte citoyen, généreux, solidaire, et important qui peut aider de nombreux patients. Cette expérience riche s’inscrit dans une dynamique de partage tant pour la donneuse que pour les patients. </p>
     </div>
-
-    <div class="cadre">
-        <h2 class="TitleCadre" >Un prélèvement rapide et indolore</h2>
-
-        <p>Le prélèvement de sang de cordon est un <strong>acte indolore, rapide et sans danger</strong> pour la mère et l’enfant. Il ne modifie en aucun cas le déroulement de l’accouchement et les gestes médicaux. Votre prélèvement se déroulera dans les meilleures conditions possibles, c’est-à-dire que si l’équipe médicale juge que la situation peut potentiellement présenter un risque direct ou indirect pour votre enfant ou vous-même, elle ne prendra aucun risque et le prélèvement n’aura pas lieu malgré votre accord donné.
-        De plus cet acte ne change rien en ce qui concerne votre prise en charge et celle de votre enfant, elle reste la même, c’est-à-dire que le prélèvement de sang de cordon ne change en rien à l’attention portée à la mère et à son bébé une fois l’accouchement terminé.</p>
-    </div>
-    
 
     <h1>Les principes du don de sang de cordon</h1>
-    <h2>Un acte bénévole et solidaire</h2>
-    <p>Votre don de sang de cordon peut sauver des vies et redonner espoir au personnes atteintes de maladies graves. Vous êtes libre de réaliser ou non ce don. C’est un acte bénévole, aucune indemnité ni compensation financière ne vous sera versées. Si vous acceptez le principe, vous pourrez alors en discuter avec une personne du corps médical de votre choix afin d’avoir toutes les explications que vous désirez. A la suite de de cet entretien, une fiche informative vous sera remise ainsi que le document de consentement.</p>
-    <h2>Un acte anonyme</h2>
-    <p>Lorsque le prélèvement sera effectué, il sera envoyé à l’EFS qui se chargera de l’anonymisation avant de le céder à LYMPHOBANK, ainsi LYMPHOBANK n’aura en aucun cas accès aux données identifiantes vous concernant ou concernant votre enfant, qu’il s’agisse de données directement identifiantes (nom, prénom, coordonnées…) ou indirectement identifiantes (date de naissance, sexe, groupe sanguin…)</p>
-    <h2>Un acte gratuit</h2>
-    <p>Le don de sang de cordon est gratuit, c’est-à-dire qu’aucun frais lié au prélèvement du sang de cordon ne sera à la charge de la mère, et aucune indemnité ni compensation ne lui sera versée.</p>
-    <h2>Un acte consenti</h2>
-    <p>Vous êtes libre de donner ou non votre sang de cordon. Si vous êtes d’accord un document de consentement vous sera remis par votre médecin. Ce document sera imprimé en 3 exemplaires : pour vous-même, la maternité partenaire et l’EFS. </p>
-    <button class="accordion"><p class="accordionTitle">Avant la réalisation du prélèvement</p></button>
-    <div class="panel">
-        <p>vous pouvez retirer à tout moment votre consentement sans aucune justification de votre part et cela ne changera pas votre prise en charge et celle du votre bébé.</p>
+    <div class="pourquoi">
+        <h2>Un acte libre</h2>
+        <p>Vous êtes libre de donner ou non votre sang de cordon.
+        <br><br>
+        Avant la réalisation du recueil, vous pouvez retirer à tout moment votre consentement auprès de votre maternité, sans aucune justification de votre part. Cela ne changera en rien votre prise en charge médicale ni celle de votre enfant et n’affectera pas vos relations avec l’équipe soignante de votre maternité.
+        Après la réalisation du recueil, si vous souhaitez demander la destruction des produits en stock conservés par Lymphobank, aucune justification ne vous sera demandée. Pour ce faire, il vous suffit de vous adresser à l’Etablissement Français du Sang Bourgogne/Franche-Comté qui transmettra votre requête à Lymphobank. Lymphobank vous transmettra alors, via l’Etablissement Français du Sang Bourgogne/Franche-Comté, un certificat de destruction. Compte tenu du processus d’anonymisation, il est inutile d’adresser votre requête directement à Lymphobank qui n’a pas accès à vos données identifiantes et ne pourra donc pas y répondre. En revanche, il n’est plus possible de réaliser la destruction des produits après que ceux-ci aient été cédés à un laboratoire de recherche.
+        <br><br>
+        Banque de Sang Placentaire
+        <br>
+        Etablissement Français du Sang Bourgogne/Franche-Comté
+        <br>
+        8 rue du Docteur Jean-François-Xavier Girod
+        <br>
+        25000 Besançon
+        <br>
+        Tel : 03 81 615 675
+        </p>
+        <h2>Un acte anonyme</h2>
+        <p>Le recueil est anonymisé par la Banque de Sang Placentaire de l’Etablissement Français du Sang Bourgogne/Franche-Comté avant d’être cédé à Lymphobank. Ainsi, Lymphobank n’a en aucun cas accès aux données identifiantes vous concernant ou concernant votre enfant, qu’il s’agisse de données directement identifiantes (nom, prénom, coordonnées…) ou indirectement identifiantes (date de naissance, sexe, groupe sanguin…)</p>
+        <h2>Un acte volontaire et gratuit </h2>
+        <p>Le don de sang de cordon est volontaire : aucune indemnité ni compensation n’est versée à la maman. Il est également gratuit : aucun frais lié au prélèvement du sang de cordon ou au recueil du cordon ombilical ou du placenta ne sera à la charge de la mère.</p>
+        <h2>Un acte éthique</h2>
+        <p>Conformément à notre Charte d’engagement (lien), les bénéfices liés à la vente de produits issus de votre don seront totalement réinvestis dans le projet de recherche mené par Lymphobank et sans aucun profit personnel tel que versement de dividendes au fondateur, associés, investisseurs ou partenaires financiers de la société Lymphobank. 
+        <br><br>
+        Respectueux de votre don, nous exerçons notre activité en toute transparence et sous le contrôle d’un Comité de Surveillance, constitué pour partie du Directeur de l’EFS-BFC, du Président de la Fédération Fran-çaise pour le Don de Sang Bénévole, d’un représentant de votre maternité disposant tous d’un accès aux résultats comptables et financiers de la société et pour validation du respect de nos engagements.
+        <br><br>
+        De même, les utilisateurs finaux, à qui les éléments issus de votre don seront cédés par Lymphobank, s’engagent contractuellement à :
+        <ul class="ethique">
+        <li>à ne pas exporter ni recéder les produits issus d'éléments du corps humain cédés par Lymphobank à une tierce partie, que ce soit à titre gracieux ou à titre onéreux</li>
+        <li>à utiliser les produits issus d'éléments du corps humain cédés par Lymphobank pour un usage de re-cherche uniquement et dans les domaines d'activités listés ci-dessus</li>
+        <li>à avoir effectué les démarches réglementaires nécessaires à la réalisation de ses activités, notamment de déclaration ou d'autorisation préalable</li>
+        </ul>
+        </p>
     </div>
-    <button class="accordion"><p class="accordionTitle">Après la réalisation du prélèvement </p></button>
-    <div class="panel">
-        <p>si vous souhaitez demander la destruction des produits en stock conservés par LYMPHOBANK, aucune justification ne vous sera demandée. Pour ce faire, il vous suffira de vous adresser à l’EFS qui transmettra votre requête à LYMPHOBANK. LYMPHOBANK vous transmettra alors, via l’EFS, un certificat de destruction. Compte tenu du processus d’anonymisation, il est inutile d’adresser votre requête directement à LBK qui n’a pas accès à vos données identifiantes et ne pourra donc pas y répondre. En revanche, il n’est plus possible de réaliser la destruction des produits après que ceux-ci ait été cédés à un laboratoire de recherche.</p>
-    </div>
-    <h2>Le non-profit</h2>
-    <p>LYMPHOBANK ne tire <strong>aucun profit personnel</strong> sur les dons de sang placentaire récoltés. Les bénéfices liés au don de sang sont intégralement réinvestis dans la start-up. Conformément à notre Charte d’engagement (disponible sur <a href="www.lymphobank.fr" target="_blank" rel="noopener noreferrer">www.lymphobank.fr</a> ), les bénéfices réalisés ne sont pas redistribués à la Direction, au personnel ou aux éventuels investisseurs de la société, sous quelque forme que ce soit. Un comité de surveillance constitué de représentants de l’EFS et de la Fédération
-    Française pour le Don de Sang Bénévole a accès aux comptes de résultat de la start-up et peut réaliser des audits comptables afin de s’assurer du respect de ses engagements.
-    Ainsi, nos partenaires sont les utilisateurs finaux, ils ont l’interdiction de revendre les cellules fournies à un intermédiaires sans y avoir apporter une valeur ajoutée. 
-    </p>
-
-    <div class="textPurple"><p><strong>Note :</strong> si vous souhaitez donner votre sang de cordon pour un usage thérapeutique, sachez qu’environ deux tiers des dons ne sont pas utilisables pour une greffe néanmoins, ils peuvent être utilisés pour la recherche scientifique. 
-    <br><br> 
-    Si vous souhaitez conserver votre don pour votre enfant, sachez que le don de sang placentaire n’est pas un don autologue autrement dit pour soi-même. En France, la conservation de cellules souches pour soi est interdite. Des banques de sang placentaires privées et commerciales permettent de stocker ce sang placentaire à l’étranger en vue d’une greffe hypothétique pour votre enfant à naître. 
-    « Ce service est payant et n’est recommandé ni par le Comité Consultatif National d’Ethique ni par le Collège National des Gynécologues Obstétricien Français, en raison de l’incertitude sur l’utilisation de ces cellules dans l’état actuel des connaissances. » issu du Banque-de-Sang-Placentaire.pdf du CHU de Montpellier. 
-    </p></div>
-
+    
     
 
 {% endblock %}
