--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -32,7 +32,7 @@
     Celui-ci peut servir pour deux usages : thérapeutique ou scientifique.
     <br><br>
     <h2>Le don du sang de cordon à usage thérapeutique </h2>
-    <div class="illustrated"><p><img class="illustrationLeft" src={{ asset ('img/therapeutique.PNG')}}><p>La plupart des maternités ne proposent pas de recueillir le sang de cordon : seules certaines maternités, agréées par le Ministère de la Santé, appartiennent au Réseau Français de Sang Placentaire et sont autorisées à prélever le sang de cordon pour un usage thérapeutique. Les dons de sang sont alors centralisés, traités et conservés en France au sein de quatre Banques de Sang Placentaire, dans l’attente de leur administration à un patient.
+    <div class="illustrated"><img class="illustrationLeft" src={{ asset ('img/therapeutique.PNG')}}><p>La plupart des maternités ne proposent pas de recueillir le sang de cordon : seules certaines maternités, agréées par le Ministère de la Santé, appartiennent au Réseau Français de Sang Placentaire et sont autorisées à prélever le sang de cordon pour un usage thérapeutique. Les dons de sang sont alors centralisés, traités et conservés en France au sein de quatre Banques de Sang Placentaire, dans l’attente de leur administration à un patient.
     <br>
     Cependant, il se peut que le don de sang de cordon soit non conforme pour être greffé à un patient. Il peut alors être réorienté vers un usage scientifique et servir à la recherche.
     <br><br>
@@ -88,7 +88,7 @@
         </div>
     </div>
     <h2>Le don de sang de cordon à usage scientifique</h2>
-    <div class="illustrated"><p><img class="illustrationLeft" src={{ asset ('img/scientifique.PNG')}}>Les maternités partenaires de LYMPHOBANK proposent de prélever le sang de cordon pour un usage scientifique : les besoins de la recherche biomédicale en sang placentaire sont en effet en constante augmentation. Les modalités de don de sang de cordon pour un usage scientifique sont plus simples que pour un don à visée thérapeutique.
+    <div class="illustrated"><img class="illustrationLeft" src={{ asset ('img/scientifique.PNG')}}><p>Les maternités partenaires de LYMPHOBANK proposent de prélever le sang de cordon pour un usage scientifique : les besoins de la recherche biomédicale en sang placentaire sont en effet en constante augmentation. Les modalités de don de sang de cordon pour un usage scientifique sont plus simples que pour un don à visée thérapeutique.
     <br>
     Donner son sang de cordon, c’est aider la recherche !
     </p></div>
