--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -197,6 +197,10 @@ $fond :#fffdf0;
     }
 }
 
+.actuLink{
+    color: black;
+}
+
 // X-Large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
 
