--- a/assets/styles/cardActu.scss
+++ b/assets/styles/cardActu.scss
@@ -2,6 +2,30 @@ $pastel : #cec0d6;
 $pastelHover : #b499c3;
 $fond :#fffdf0;
 
+//actus
+.actus{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 76vw;
+    .grid-gallery{
+        max-width: 1500px;
+        width: 100%;
+        height: auto;
+        margin: 30px auto;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 280px);
+        justify-content: center;
+        grid-gap: 15px;
+    } 
+    .grid-item{
+        width: 280px;
+        height: 190px;
+    }
+}
+
+
 .cardActu{
     position: relative;
     border-radius: 15px;
@@ -17,7 +41,7 @@ $fond :#fffdf0;
         top: 0;
         display: flex;
         align-items: center;
-        height: 200px;
+        height: 66.66%;
     }
     .offrePic{
         width: 100%;
@@ -26,20 +50,20 @@ $fond :#fffdf0;
     .bottom{
         position: absolute;
         width: 100%;
-        height: 80px;
+        height: 51px;
         background-color: $pastel;
         bottom: 0;
         left: 0;
         .titreActu{
             text-align: center;
-            font-size: 1.7em;
+            font-size: 1em;
             margin-bottom: 0.5em;
             margin-top: 0.25em;
         }
         .sousTitre{
             text-align: center;
             font-weight: 500;
-            font-size: 1.2em;
+            font-size: 1em;
         }
     }
 }
@@ -49,4 +73,57 @@ $fond :#fffdf0;
     rgba(19, 26, 32, 0.08) 0px 35px 75px -35px;
     transform: scale(102%) perspective(75em) rotateX(15deg);
     transition: all .3s ease-in-out;
+}
+
+// Small devices
+@media (min-width: 360px) {
+    //actus
+    .actus{
+        .grid-gallery{
+            grid-template-columns: repeat(auto-fill, 360px);
+        } 
+        .grid-item{
+            width: 360px;
+            height: 240px;
+        }
+    }
+    .cardActu{
+        .bottom{
+            height: 64px;
+            .titreActu{
+                font-size: 1.3em;
+                margin-top: 0.2em;
+            }
+            .sousTitre{
+                font-size: 1.1em;
+            }
+        }
+    }
+}
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+    //actus
+    .actus{
+        .grid-gallery{
+            grid-template-columns: repeat(auto-fill, 450px);
+        } 
+        .grid-item{
+            width: 450px;
+            height: 300px;
+        }
+    }
+
+    .cardActu{
+        .bottom{
+            height: 80px;
+            .titreActu{
+                font-size: 1.7em;
+                margin-top: 0.25em;
+            }
+            .sousTitre{
+                font-size: 1.2em;
+            }
+        }
+    }
 }
