--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -57,7 +57,7 @@
                         <img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
                         <img class="icon" src={{ asset ('img/icons/syringe.svg')}}>
                     </div>
-                    <h2>Le jour de l'accouchement : prise de sang à la maman et prélèvement de sang de cordon</h2>
+                    <h2>Le jour de l'accouchement : prise de sang à la maman et prélèvement du sang de cordon</h2>
                     <i class="fas fa-long-arrow-alt-right fa-4x"></i>
                     <img class="icon" src={{ asset ('img/icons/EFSlogo.png')}}>
                     <h2>Anonymisation et traitement de la poche par la banque de sang placentaire</h2>
@@ -108,13 +108,13 @@
                     <h2>La maman donne son consentement</h2>
                     <i class="fas fa-long-arrow-alt-right fa-4x"></i>
                     <img class="icon" src={{ asset ('img/icons/EFSlogo.png')}}>
-                    <h2>Anonymisation et traitement de la poche par la banque de sang placentaire</h2>
+                    <h2>Anonymisation du don par la banque de sang placentaire</h2>
                     <i class="fas fa-long-arrow-alt-right fa-4x"></i>
                     <div class="prelevement">
                         <img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
                         <img class="icon" src={{ asset ('img/icons/syringe.svg')}}>
                     </div>
-                    <h2>Le jour de l'accouchement : prise de sang à la maman et prélèvement de sang de cordon</h2>
+                    <h2>Le jour de l'accouchement : prise de sang à la maman et reccueil du sang de cordon</h2>
                     <i class="fas fa-long-arrow-alt-right fa-4x"></i>
                     <img id="logolbk" class="icon" src={{ asset ('img/icons/LogoLymphobank.png')}}>
                     <h2>Traitement de la poche par Lymphobank</h2>
