--- a/templates/pages/Pourquoi.html.twig
+++ b/templates/pages/Pourquoi.html.twig
@@ -10,7 +10,7 @@
 
 {% block body %}
 
-    <h1>Pourquoi faire un don de sang de cordon ?</h1>
+    <h1>Pourquoi donner ?</h1>
     <button class="accordion"><p class="accordionTitle">1.  Sauver des vies</p></button>
     <div class="panel">
         <img class="illustrationAccordeon" src={{ asset ('img/Vie.PNG')}}><p>La greffe de cellules souches hématopoïétiques issues du sang de cordon ombilical est une alternative à la greffe de moelle osseuse, qui permet de traiter diverses maladies du sang. Il s’agit d’une source différente de cellules souches qui présente les mêmes spécificités et est moins invasive (prélèvement indolore) que le don de moelle osseuse et qui conduit à une meilleure tolérance du receveur, réduisant ainsi le risque d’effets secondaires indésirables.
@@ -35,7 +35,7 @@
     </div>
 
     <h1>Les principes du don de sang de cordon</h1>
-    <div class="pourquoi">
+    <div class="bulle">
         <h2>Un acte libre</h2>
         <p>Vous êtes libre de donner ou non votre sang de cordon.
         <br><br>
