--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -62,7 +62,7 @@
                 <h2><div class="underline">T</div>ransparent</h2>
                 <div class="tooltipGeant">
                     <img class="icon" src={{ asset ('img/icons/biology.png')}}>
-                    <span class="tooltipGeantText">Un Comité de Surveillance indépendant vérifie le respect par Lymphobank de ses engagements financiers
+                    <span class="tooltipGeantText">Un Comité de Surveillance indépendant vérifie le respect par Lymphobank de ses engagements éthiques et financiers
                     </span>
                 </div>
             </div>
@@ -84,7 +84,7 @@
         <li><strong>Lucie LAURENT </strong>: Technicienne de production en Biotechnologie</li>
         <li><strong>Eric ROBINET :</strong> Direction</li>
     </ul>
-    <h2>Domaine d’applications (principaux secteurs d’activités)</h2>
+    <h2>Domaine d’applications (principaux secteurs d’activités) :</h2>
     <div class="valeurs">
         <div class="card">
             <div class="card-title"><h2>Voici les différents secteurs d’applications dans lesquels vont être utilisés vos dons :</h2></div>
