--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -65,7 +65,7 @@
                     <h2><div class="underline">T</div>ransparent</h2>
                     <div class="tooltipGeant">
                         <img class="icon" src={{ asset ('img/icons/biology.png')}}>
-                        <span class="tooltipGeantText">Un Comité de Surveillance indépendant vérifie le respect par Lymphobank de ses engagements financiers
+                        <span class="tooltipGeantText">Un Comité de Surveillance indépendant vérifie le respect par Lymphobank de ses engagements éthiques et financiers
                         </span>
                     </div>
                 </div>
