--- a/assets/styles/about.scss
+++ b/assets/styles/about.scss
@@ -82,7 +82,7 @@ $fond :#fffdf0;
         transform: scale(100%);
         transition: transform .2s ease-in-out;
         .contentCard{
-            font-size: .8em;
+            font-size: 1em;
             font-weight: bold;
             margin: 0 4em;
             height: 100%;
