--- a/templates/pages/Comment.html.twig
+++ b/templates/pages/Comment.html.twig
@@ -24,8 +24,8 @@
     </div>
     <button id="btn2" class="accordion"><p class="accordionTitle">2.	Documents fournis lors du RDV à la maternité</p></button>
     <div class="panel">
-        <p>Lors de votre rendez-vous dans votre maternité, une sage-femme vous fournira une lettre d’information, qu’il s’agisse d’un don pour usage thérapeutique ou scientifique ; afin de vous renseigner au maximum sur ce don. Cette lettre d’information peut également se télécharger via un lien. 
-        Le formulaire de consentement vous sera fourni en trois exemplaires : pour la maternité, l’EFS et vous-même. 
+        <p>Lors de votre rendez-vous dans votre maternité, une sage-femme vous fournira une <a href="" target="_blank" rel="noopener noreferrer">lettre d’information</a>, qu’il s’agisse d’un don pour usage thérapeutique ou scientifique ; afin de vous renseigner au maximum sur ce don. 
+        Le <a href="" target="_blank" rel="noopener noreferrer">formulaire de consentement</a> vous sera fourni en trois exemplaires : pour la maternité, l’EFS et vous-même. 
         </p>
     </div>
     <button class="accordion"><p class="accordionTitle">3.	Documents signés et complétés</p></button>
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-title"><h2>Conditions pour lesquelles le prélèvement ne peut avoir lieux :</h2></div>
+            <div class="card-title"><h2>Conditions pour lesquelles le prélèvement ne peut avoir lieu :</h2></div>
             <div class="contentCard">
                 <ul>
                     <li>Les 37 semaines d’aménorrhées ne sont pas respectées (bébé prématuré)</li>
