--- a/templates/pages/Pourquoi.html.twig
+++ b/templates/pages/Pourquoi.html.twig
@@ -39,12 +39,12 @@
         <h2>Un acte libre</h2>
         <p>Vous êtes libre de donner ou non votre sang de cordon.
         <br><br>
-        Avant la réalisation du recueil, vous pouvez retirer à tout moment votre consentement auprès de votre maternité, sans aucune justification de votre part. Cela ne changera en rien votre prise en charge médicale ni celle de votre enfant et n’affectera pas vos relations avec l’équipe soignante de votre maternité.
-        Après la réalisation du recueil, si vous souhaitez demander la destruction des produits en stock conservés par Lymphobank, aucune justification ne vous sera demandée. Pour ce faire, il vous suffit de vous adresser à l’Etablissement Français du Sang Bourgogne/Franche-Comté qui transmettra votre requête à Lymphobank. Lymphobank vous transmettra alors, via l’Etablissement Français du Sang Bourgogne/Franche-Comté, un certificat de destruction. Compte tenu du processus d’anonymisation, il est inutile d’adresser votre requête directement à Lymphobank qui n’a pas accès à vos données identifiantes et ne pourra donc pas y répondre. En revanche, il n’est plus possible de réaliser la destruction des produits après que ceux-ci aient été cédés à un laboratoire de recherche.
+        Avant la réalisation du recueil,votre consentement au prélèvement vous sera demandé, par signature d’un <a href="">document de consentement</a>. Cependant, vous pouvez retirer à tout moment votre consentement auprès de votre maternité, sans aucune justification de votre part. Cela ne changera en rien votre prise en charge médicale ni celle de votre enfant et n’affectera pas vos relations avec l’équipe soignante de votre maternité.
+        Après la réalisation du recueil, si vous souhaitez demander la destruction des produits en stock conservés par Lymphobank, aucune justification ne vous sera demandée. Pour ce faire, il vous suffit de vous adresser à l’Etablissement Français du Sang Bourgogne/Franche-Comté (EFS-BFC), à l’adresse ci-dessous. L’EFS-BFC transmettra votre requête à Lymphobank qui vous transmettra alors, via l’EFS-BFC qui transmettra votre requête à Lymphobank. Lymphobank vous transmettra alors, via l’Etablissement Français du Sang Bourgogne/Franche-Comté, un certificat de destruction. Compte tenu du processus d’anonymisation, il est inutile d’adresser votre requête directement à Lymphobank qui n’a pas accès à vos données identifiantes et ne pourra donc pas y répondre. En revanche, il n’est plus possible de réaliser la destruction des produits après que ceux-ci aient été cédés par Lymphobank à un laboratoire de recherche.
         <br><br>
         Banque de Sang Placentaire
         <br>
-        Etablissement Français du Sang Bourgogne/Franche-Comté
+        Etablissement Français du Sang Bourgogne/Franche-Comté(EFS-BFS)
         <br>
         8 rue du Docteur Jean-François-Xavier Girod
         <br>
