--- a/templates/pages/MentionsLegales.html.twig
+++ b/templates/pages/MentionsLegales.html.twig
@@ -10,16 +10,16 @@
     <h1>Mentions légales</h1>
     <h2>Crédits photos et icones</h2>
     <p>
-        <div>Icônes conçues par <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/fr/" title="Flaticon">www.flaticon.com</a></div>
-        <div>Icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-        <div>Icons made by <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp">Eucalyp</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-        <div>Icônes conçues par <a href="https://www.flaticon.com/fr/auteurs/prosymbols" title="Prosymbols">Prosymbols</a> from <a href="https://www.flaticon.com/fr/" title="Flaticon">www.flaticon.com</a></div>
-        <div>Icons made by <a href="https://creativemarket.com/Becris" title="Becris">Becris</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-        <div>Icons made by <a href="https://www.flaticon.com/authors/flat-icons" title="Flat Icons">Flat Icons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-        <div>Icons made by <a href="https://www.flaticon.com/authors/photo3idea-studio" title="photo3idea_studio">photo3idea_studio</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-        <div>Icons made by <a href="https://www.flaticon.com/authors/surang" title="surang">surang</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-        <div>Icons made by <a href="https://roundicons.com/" title="Roundicons">Roundicons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
-        <div>Icons made by <a href="" title="Those Icons">Those Icons</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+        <div>Icônes conçues par <a href="https://www.freepik.com" title="Freepik" target="_blank" rel="noopener noreferrer">Freepik</a> from <a href="https://www.flaticon.com/fr/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
+        <div>Icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26" target="_blank" rel="noopener noreferrer">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
+        <div>Icons made by <a href="https://www.flaticon.com/authors/eucalyp" title="Eucalyp" target="_blank" rel="noopener noreferrer">Eucalyp</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
+        <div>Icônes conçues par <a href="https://www.flaticon.com/fr/auteurs/prosymbols" title="Prosymbols" target="_blank" rel="noopener noreferrer">Prosymbols</a> from <a href="https://www.flaticon.com/fr/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
+        <div>Icons made by <a href="https://creativemarket.com/Becris" title="Becris" target="_blank" rel="noopener noreferrer">Becris</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
+        <div>Icons made by <a href="https://www.flaticon.com/authors/flat-icons" title="Flat Icons" target="_blank" rel="noopener noreferrer">Flat Icons</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
+        <div>Icons made by <a href="https://www.flaticon.com/authors/photo3idea-studio" title="photo3idea_studio" target="_blank" rel="noopener noreferrer">photo3idea_studio</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
+        <div>Icons made by <a href="https://www.flaticon.com/authors/surang" title="surang" target="_blank" rel="noopener noreferrer">surang</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
+        <div>Icons made by <a href="https://roundicons.com/" title="Roundicons"target="_blank" rel="noopener noreferrer">Roundicons</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
+        <div>Icons made by <a href="" title="Those Icons" target="_blank" rel="noopener noreferrer">Those Icons</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank" rel="noopener noreferrer">www.flaticon.com</a></div>
     </p>
 {% endblock %}
 
