modif schéma étapes

--- a/templates/pages/Comment.html.twig
+++ b/templates/pages/Comment.html.twig
@@ -64,19 +64,35 @@
     <h2>Les étapes du prélèvement :</h2>
     <div class="etapes">
         <div class="etape">
-            <div class="iconSchema"><h2 class="nb">1.</h2><img class="icon" src={{ asset ('img/icons/bottle.svg')}}>
-            <h2>Le cordon ombilical est désinfecté par une solution antiseptique</h2></div>
+            <div class="tooltipGeant">
+                <div class="iconSchema"><h2 class="nb">1.</h2><img class="icon" src={{ asset ('img/icons/test-tube.svg')}}>
+                <h2>Une prise de sang est effectuée sur la maman pour analyses de sang</h2></div>
+                <span class="tooltipGeantText">Une prise de sang vous sera effectuée afin de que l’EFS-BFC analyse l’absence de pathogènes tels que virus de l’immunodéficience humaine (VIH), de l’hépatite B (VHB), de l’hépatite C (VHC) et de la syphilis.
+                </span>
+            </div>
             <i class="fas fa-long-arrow-alt-right fa-4x"></i>
-            <div class="iconSchema"><h2 class="nb">2.</h2><img class="icon" src={{ asset ('img/icons/syringe.svg')}}>
-            <h2>Une aiguille est insérée dans la veine ombilicale</h2></div>
+            <div class="tooltipGeant">
+                <div class="iconSchema"><h2 class="nb">2.</h2><img class="icon" src={{ asset ('img/icons/bottle.svg')}}>
+                <h2>Le cordon ombilical est coupé et désinfecté</h2></div>
+                <span class="tooltipGeantText">Après avoir été coupé, le cordon ombilical relié au placenta est désinfecté par une solution antiseptique.
+                </span>
+            </div>
         </div>
         <i class="fas fa-long-arrow-alt-right fa-4x between"></i>
         <div class="etape">
-            <div class="iconSchema"><h2 class="nb">3.</h2><img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
-            <h2>Le sang est recueilli par gravité dans la poche pendant 2 à 4 minnutes</h2></div>
+            <div class="tooltipGeant">
+                <div class="iconSchema"><h2 class="nb">3.</h2><img class="icon" src={{ asset ('img/icons/syringe.svg')}}>
+                <h2>Une aiguille est insérée dans la veine ombilicale</h2></div>
+                <span class="tooltipGeantText">Une sage-femme réalise le prélèvement de sang de cordon par ponction dans la veine du cordon ombilical, pendant que le placenta est encore en place.
+                </span>
+            </div>
             <i class="fas fa-long-arrow-alt-right fa-4x"></i>
-            <div class="iconSchema"><h2 class="nb">4.</h2><img class="icon" src={{ asset ('img/icons/test-tube.svg')}}>
-            <h2>Une prise de sang est effectuée sur la maman pour analyses de sang</h2></div>
+            <div class="tooltipGeant">
+                <div class="iconSchema"><h2 class="nb">4.</h2><img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
+                <h2>Le sang est recueilli par gravité dans la poche pendant 2 à 4 minnutes</h2></div>
+                <span class="tooltipGeantText">Le prélèvement de sang de cordon se déroulera dans les quelques minutes qui suivent l’accouchement et durera moins de 5 minutes. C’est une procédure simple, rapide, indolore et sans danger pour l’enfant comme pour la mère. Le cordon et/ou le placenta peuvent éventuellement être recueillis pour un usage scientifique, après que le placenta ait été expulsé.
+                </span>
+            </div>
         </div>
     </div>
     <div class="bulle"><h2>Après l’accouchement</h2></div>
