creation page actu

--- a/assets/styles/cardActu.scss
+++ b/assets/styles/cardActu.scss
@@ -75,6 +75,10 @@ $fond :#fffdf0;
     transition: all .3s ease-in-out;
 }
 
+a{
+    color: black;
+}
+
 // Small devices
 @media (min-width: 360px) {
     //actus
