--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -117,9 +117,49 @@ $fond :#fffdf0;
     height: 0;
 }
 
+//btn actu
+#actuBtn{
+    margin: 0 auto;
+    width: auto;
+    padding: 0 0.5em;
+    background-color: $pastel;
+    border-radius: 15px;
+    font-family: 'Karla', sans-serif;
+    font-weight: bold;
+    outline: none;
+    cursor: pointer;
+    border: none;
+    padding: 15px;
+    text-align: center;
+    font-size: 0.8em;
+    margin-bottom: 1.5em;
+}
+
+#actuBtn:hover{
+    box-shadow: inset 2px 4px 3px rgba(0, 0, 0, 0.1);
+}
+.actuHeader{
+    width: 100%;
+    position: relative;
+}
+
+.center{
+    display: flex;
+    justify-content: center;
+}
 
 
 //responsive
+
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+    #actuBtn{
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+}
+
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
