--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -1,7 +1,8 @@
 
 $pastel : #cec0d6;
-$pastelHover : #b499c3;
-$fond :#fffdf0;
+$pastelHover : #52067a;
+$fond :rgb(255, 248, 219);
+$kaki: rgb(180, 139, 10);
 
 *, ::before, ::after{
   margin: 0;
@@ -42,7 +43,7 @@ html, body{
   margin-top: 2em;
   margin-bottom: 2em;
   background-color: $fond;
-  font-family: 'Hind Siliguri', sans-serif;
+  font-family: 'Raleway', sans-serif;
   .titlePage{
     p{
       font-size: 1.25em;
@@ -50,15 +51,18 @@ html, body{
     }
   }
   h1{
-    font-family: 'Karla', sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-size: 2.5em;
     margin-bottom: 1.5em;
     margin-top: 1em;
+    color: rgb(180, 139, 10);
+    font-weight: 800;
   }
   h2{
-    font-family: 'Karla', sans-serif;
-    font-size: 1.5em;
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.7em;
     margin-bottom: 1em;
+    color: $pastelHover;
   }
 
   //encadré
@@ -98,10 +102,11 @@ html, body{
   }
 
   p{
-    line-height: 20px;
+    line-height: 30px;
     height: auto;
-    font-size: 1.1em;
+    font-size: 1.2em;
     margin-bottom: 2em;
+    font-weight: 600;
     a{
       color: $pastel;
       font-weight: bold;
