modif front couleur

--- a/templates/pages/Pourquoi.html.twig
+++ b/templates/pages/Pourquoi.html.twig
@@ -29,7 +29,7 @@
         Ainsi, faire un don de sang de cordon à usage scientifique, c’est aider la recherche.</p>
     </div>
 
-    <button class="accordion"><p class="accordionTitle">3.	Une action responsable et solidaire</p></button>
+    <button class="accordion"><p class="accordionTitle">3.	Un acte responsable et solidaire</p></button>
     <div class="panel">
         <img class="illustrationAccordeon" src={{ asset ('img/Solidarité.PNG')}}><p>L’acte de donner son sang de cordon est un acte citoyen, généreux, solidaire, et important qui peut aider de nombreux patients. Cette expérience riche s’inscrit dans une dynamique de partage tant pour la donneuse que pour les patients. </p>
     </div>
