--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -1,6 +1,7 @@
 $pastel : #cec0d6;
-$pastelHover : #b499c3;
-$fond :#fffdf0;
+$pastelHover : #52067a;
+$fond :rgb(255, 248, 219);
+$kaki: rgb(180, 139, 10);
 
 .homeBanner{
     position: sticky;
@@ -47,6 +48,12 @@ $fond :#fffdf0;
     p{
         text-align: center;
         font-size: 1.2em;
+    }
+    h2{
+        color: black;
+    }
+    .nomTemoin{
+        color: $pastelHover;
     }
     .schemaGeant{
         margin: 2em 1em;
@@ -124,14 +131,14 @@ $fond :#fffdf0;
     padding: 0 0.5em;
     background-color: $pastel;
     border-radius: 15px;
-    font-family: 'Karla', sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-weight: bold;
     outline: none;
     cursor: pointer;
     border: none;
     padding: 15px;
     text-align: center;
-    font-size: 0.8em;
+    font-size: 1em;
     margin-bottom: 1.5em;
 }
 
