--- a/assets/styles/ou.scss
+++ b/assets/styles/ou.scss
@@ -9,3 +9,23 @@ $fond :#fffdf0;
     width: 100%;
     height: 600px;
 }
+
+
+
+.bulle{
+    h2{
+        position: relative;
+        margin-left: 30px;
+    }
+    h2::before{
+        content: '';
+        border-radius: 50%;
+        height: 20px;
+        width: 20px;
+        background: $pastel;
+        position: absolute;
+        left: -30px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+}
