--- a/templates/pages/Comment.html.twig
+++ b/templates/pages/Comment.html.twig
@@ -40,9 +40,9 @@
             <div class="card-title"><h2>Conditions pour lesquelles le prélèvement a lieu :</h2></div>
             <div class="contentCard">
                 <ul>
-                    <li>Le bébé n’est pas prématuré (37 semaines d’aménorrhées minimun)</li>
-                    <li>Lors d’une césarienne programmée (le prélèvement aura lieu une fois le placenta ait été expulsé)</li>
-                    <li>Lors d’un accouchement par voie basse (soit en attendant que le placenta soit expulsé soit lorsqu’il est déjà sorti)</li>
+                    <li>Avoir au moins 18 ans</li>
+                    <li>Accouchement à 37 semaines d’aménorrhées minimum</li>
+                    <li>Accouchement par voie basse</li>
                     <li>Une fois que le cordon ombilical est coupé</li>
                 </ul>
             </div>
@@ -51,23 +51,23 @@
             <div class="card-title"><h2>Conditions pour lesquelles le prélèvement ne peut avoir lieu :</h2></div>
             <div class="contentCard">
                 <ul>
-                    <li>Les 37 semaines d’aménorrhées ne sont pas respectées (bébé prématuré)</li>
-                    <li>Césarienne non programmée (en urgence)</li>
-                    <li>Toutes situations considérées par l’équipe médicale pouvant présenter potentiellement un risque direct ou indirect pour la maman ou pour l’enfant.
-                    Ex : l’équipe n’a pas le temps de réaliser le prélèvement à cause du nombre élevé d’accouchement le même jour)
+                    <li>Accouchement prématuré</li>
+                    <li>Accouchement par césarienne programmée ou non programmée (en urgence)</li>
+                    <li>Toute situation considérée par l’équipe médicale pouvant présenter potentiellement un risque direct ou indirect pour la maman ou pour l’enfant.
+                    <li>Toute autre cause rendant impossible le prélèvement (Ex : l’équipe n’a pas le temps de réaliser le prélèvement à cause du nombre élevé d’accouchement le même jour)</li> 
                     </li>
                 </ul>
             </div>
         </div>
     </div>
-    <div class="textPurple"><p>Ainsi, même si l’équipe médicale détient votre consentement pour le prélèvement, c’est elle qui décide s’il doit avoir lieu ou non.</p></div>
+    <div class="textPurple"><p>Même si vous avez donné votre consentement pour le prélèvement, l’équipe médicale décidera en dernier lieu s’il peut avoir lieu ou non.</p></div>
     <h2>Les étapes du prélèvement :</h2>
     <div class="etapes">
         <div class="etape">
             <div class="tooltipGeant">
                 <div class="iconSchema"><h2 class="nb">1.</h2><img class="icon" src={{ asset ('img/icons/test-tube.svg')}}>
                 <h2>Une prise de sang est effectuée sur la maman pour analyses de sang</h2></div>
-                <span class="tooltipGeantText">Une prise de sang vous sera effectuée afin de que l’EFS-BFC analyse l’absence de pathogènes tels que virus de l’immunodéficience humaine (VIH), de l’hépatite B (VHB), de l’hépatite C (VHC) et de la syphilis.
+                <span class="tooltipGeantText">Une prise de sang vous sera effectuée afin de que l’EFS-BFC analyse l’absence de pathogènes tels que la syphilis et le virus de l’immunodéficience humaine (VIH), de l’hépatite B (VHB), de l’hépatite C (VHC) et de la syphilis.
                 </span>
             </div>
             <i class="fas fa-long-arrow-alt-right fa-4x"></i>
